--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
 
     </head>
     <body>
-        <header class="cabecalho mobile">
+        <header class="cabecalho">
             <div class="header_logotipo_menu container">
+                <!-- header mobile -->
                 <input type="checkbox" id="menu" class="container__botao">
                 <label for="menu" class="container__rotulo">
                     <span class="cabecalho__menu-hamburguer"></span>
@@ -41,16 +42,46 @@
                     </li>
                 </ul>
                 <img src="./assets/images/Logo.svg" alt="Logo da AluraBooks" class="cabecalho__logo">
+                <h1 class="container__titulo"><b class="container__titulo--negrito">Alura</b>Books</h1>
             </div>
+
+            <ul class="opcoes">
+                <input type="checkbox" id="opcoes-menu" class="opcoes__botao" />
+                <label for="opcoes-menu" class="opcoes__rotulo">
+                    <li class="opcoes__item">Categorias</li>
+                </label>
+                <ul class="lista-menu">
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Programação</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Front-end</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Infraestrutura</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Business</a>
+                    </li>
+                    <li class="lista-menu__item">
+                        <a href="#" class="lista-menu__link">Design & UX</a>
+                    </li>
+                </ul>
+
+                <li class="opcoes__item"><a href="#" class="opcoes__link">Favoritos</a></li>
+                <li class="opcoes__item"><a href="#" class="opcoes__link">Minha estante</a></li>
+            </ul>
             <div class="header_options container">
                 <a href="#" class="cabecalho__favoritos">
                     <i class="fa-regular fa-heart" aria-label="meus favoritos" title="meus favoritos"></i>
                 </a>
-                <a href="#" class="cabecalho__sacola">
+                <a href="#" class="cabecalho__sacola container__links">
                     <i class="fa-solid fa-bag-shopping" aria-label="sacola de compras" title="sacola de compras"></i>
+                    <p class="container__texto">Minha Sacola</p>
                 </a>
-                <a href="#">
+                <a href="#" class="cabecalho__perfil container__links">
                     <i class="fa-regular fa-circle-user" aria-label="usuario" title="usuario"></i>
+                    <p class="container__texto">Meu Perfil</p>
                 </a>
             </div>
         </header>
@@ -63,92 +94,94 @@
 
         <section class="carrossel">
             <h2 class="carrossel__titulo">Novos lançamentos</h2>
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- Additional required wrapper -->
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
+            <div class="container__carrossel">
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- Additional required wrapper -->
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="./assets/images/capas/ApacheKafka.svg" alt="Livro sobre apache e spring boot"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Liderança.svg" alt="Livro sobre liderança em design"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Javascript.svg" alt="Livro sobre javascript"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Arquitetura.svg" alt="Livro sobre Arquiteturas"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Gestão2.svg" alt="Livro sobre gestão"></div>
+                    </div>
                 
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="./assets/images/capas/ApacheKafka.svg" alt="Livro sobre apache e spring boot"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Liderança.svg" alt="Livro sobre liderança em design"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Javascript.svg" alt="Livro sobre javascript"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Arquitetura.svg" alt="Livro sobre Arquiteturas"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Gestão2.svg" alt="Livro sobre gestão"></div>
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-               
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-        </section>
-
-        <section class="card">
-            <div class="card__descricao">
-                <!-- 1ª coluna -->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
-                    <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-                    <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                <div class="card">
+                    <div class="card__descricao">
+                        <!-- 1ª coluna -->
+                        <div class="descricao">
+                            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+                            <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+                            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+                        </div>
+                        <!-- 2ª coluna -->
+                        <img src="./assets/images/Perfil-escritora.svg" alt="Livro sobre Angular" class="descricao__imagem">
+                    </div>
+                    <div class="card__botoes">
+                        <ul class="botoes">
+                            <li class="botoes__item"><img src="./assets/images/Favoritos.svg" alt="Favoritar livro"></li>
+                            <li class="botoes__item"><img src="./assets/images/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                        </ul>
+                        <a href="#" class="botoes__ancora">Saiba mais</a>
+                    </div>
                 </div>
-                <!-- 2ª coluna -->
-                <img src="./assets/images/Perfil-escritora.svg" alt="Livro sobre Angular" class="descricao__imagem">
-            </div>
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/images/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="./assets/images/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
             </div>
         </section>
 
         <section class="carrossel">
             <h2 class="carrossel__titulo">Mais vendidos</h2>
-            <!-- Slider main container -->
-            <div class="swiper">
-                <!-- Additional required wrapper -->
-                <!-- If we need pagination -->
-                <div class="swiper-pagination"></div>
-                <div class="swiper-wrapper">
-                    <!-- Slides -->
-                    <div class="swiper-slide"><img src="./assets/images/capas/Javascript.svg" alt="Livro sobre apache e spring boot"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Nodejs.svg" alt="Livro sobre liderança em design"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/ReactNative.svg" alt="Livro sobre javascript"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Portugol.svg" alt="Livro sobre Arquiteturas"></div>
-                    <div class="swiper-slide"><img src="./assets/images/capas/Liderança.svg" alt="Livro sobre gestão"></div>
+            <div class="container__carrossel">
+                <!-- Slider main container -->
+                <div class="swiper">
+                    <!-- Additional required wrapper -->
+                    <!-- If we need pagination -->
+                    <div class="swiper-pagination"></div>
+                    <div class="swiper-wrapper">
+                        <!-- Slides -->
+                        <div class="swiper-slide"><img src="./assets/images/capas/Javascript.svg" alt="Livro sobre apache e spring boot"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Nodejs.svg" alt="Livro sobre liderança em design"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/ReactNative.svg" alt="Livro sobre javascript"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Portugol.svg" alt="Livro sobre Arquiteturas"></div>
+                        <div class="swiper-slide"><img src="./assets/images/capas/Liderança.svg" alt="Livro sobre gestão"></div>
+                    </div>
+                    <!-- If we need navigation buttons -->
+                    <div class="swiper-button-prev"></div>
+                    <div class="swiper-button-next"></div>
                 </div>
-                <!-- If we need navigation buttons -->
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-button-next"></div>
-            </div>
-        </section>
 
-        <section class="card">
-            <div class="star_autoria">
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-                <i class="fa-solid fa-star"></i>
-            </div>
-            <div class="card__descricao">
-                <!-- 1ª coluna -->
-                <div class="descricao">
-                    <h3 class="descricao__titulo">Autora do mês</h3>
-                    <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
-                    <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em front-end.</p>
+                <div class="card">
+                    <div class="star_autoria">
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                    </div>
+                    <div class="card__descricao">
+                        <!-- 1ª coluna -->
+                        <div class="descricao">
+                            <h3 class="descricao__titulo">Autora do mês</h3>
+                            <h2 class="descricao__titulo-livro">Juliana Agarikov</h2>
+                            <p class="descricao__texto">Analista de sistemas e escritora, Juliana é especialista em front-end.</p>
+                        </div>
+                        <!-- 2ª coluna -->
+                        <img src="./assets/images/foto-escritora.svg" alt="foto escritora do mês" class="descricao__imagem">
+                    </div>
+                    <div class="card__botoes">
+                        <ul class="botoes">
+                            <li class="botoes__item"><img src="./assets/images/Favoritos.svg" alt="Favoritar livro"></li>
+                            <li class="botoes__item"><img src="./assets/images/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+                        </ul>
+                        <a href="#" class="botoes__ancora">Saiba mais</a>
+                    </div>
                 </div>
-                <!-- 2ª coluna -->
-                <img src="./assets/images/foto-escritora.svg" alt="foto escritora do mês" class="descricao__imagem">
-            </div>
-            <div class="card__botoes">
-                <ul class="botoes">
-                    <li class="botoes__item"><img src="./assets/images/Favoritos.svg" alt="Favoritar livro"></li>
-                    <li class="botoes__item"><img src="./assets/images/Compras.svg" alt="Adicionar no carrinho de compras"></li>
-                </ul>
-                <a href="#" class="botoes__ancora">Saiba mais</a>
             </div>
         </section>
 
@@ -167,13 +200,92 @@
         </section>
 
         <section class="contato">
-            <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
-            <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
-            <input type="email" placeholder="Cadastre seu e-mail" class="contato__email"></p>
+            <div class="contato-wapper">
+                <div class="contato__descricao">
+                    <h2 class="contato__titulo">Fique por dentro das novidades!</h2>
+                    <p class="contato__texto">Atualizações de e-books, novos livros, promoções e outros.</p>
+                </div>
+                <input type="email" placeholder="Cadastre seu e-mail" class="contato__email">
+            </div>
         </section>
         <hr />
         <footer class="footer">
             <h2 class="rodape__titulo">Grupo Alura</h2>
+            <ul class="lista-footer">
+                <li class="lista__titulo">Educação</li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/Caelum.svg" alt="logotipo da caelum">
+                    <a href="#" class="lista-footer__link">Casa do Código</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/CasaDoCodigo.svg" alt="logotipo da casa do código">
+                    <a href="#" class="lista-footer__link">Casa do Código</a>
+                </li>
+            </ul>
+
+            <ul class="lista-footer">
+                <li class="lista__titulo">Educação Online</li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/Alura.svg" alt="logotipo da Alura">
+                    <a href="#" class="lista-footer__link">Alura</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/AluraEmpresas.svg" alt="logotipo da Alura para Empresas">
+                    <a href="#" class="lista-footer__link">Alura Para Empresas</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/AluraLatam.svg" alt="logotipo da Alura LATAM">
+                    <a href="#" class="lista-footer__link">Alura LATAM</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/AluraStart.svg" alt="logotipo da Alura Start ">
+                    <a href="#" class="lista-footer__link">Alura Start</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/MusicDot.svg" alt="logotipo da MusicDot">
+                    <a href="#" class="lista-footer__link">MusicDot</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/AluraLingua.svg" alt="logotipo da Alura Língua">
+                    <a href="#" class="lista-footer__link">Alura Língua</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/PM3.svg" alt="logotipo da PM3">
+                    <a href="#" class="lista-footer__link">PM3</a>
+                </li>
+            </ul>
+
+            <ul class="lista-footer">
+                <li class="lista__titulo">Comunidade</li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/HipstersTech.svg" alt="logotipo da Hipsters ponto Tech">
+                    <a href="#" class="lista-footer__link">Hipsters ponto Tech</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/Scuba.svg" alt="logotipo da Scuba Dev">
+                    <a href="#" class="lista-footer__link">Scuba Dev</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/Layers.svg" alt="logotipo da Layers ponto Tech">
+                    <a href="#" class="lista-footer__link">Layers ponto Tech</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/LikeABoss.svg" alt="logotipo da Like a Boss">
+                    <a href="#" class="lista-footer__link">Like a Boss</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/CarreiraSemFronteira.svg" alt="logotipo da Carreira sem Fronteira">
+                    <a href="#" class="lista-footer__link">Carreira sem Fronteira</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/HipstersJobs.svg" alt="logotipo da Hipsters ponto Jobs">
+                    <a href="#" class="lista-footer__link">Hipsters ponto Jobs</a>
+                </li>
+                <li class="lista__item">
+                    <img src="./assets/images/footer/GUJ.svg" alt="logotipo da GUH">
+                    <a href="#" class="lista-footer__link">GUJ</a>
+                </li>
+            </ul>
         </footer>
 
 
